add RovieControllerViewController for controlling the robots movements

--- a/Rovie/Base.lproj/Main.storyboard
+++ b/Rovie/Base.lproj/Main.storyboard
@@ -5,15 +5,15 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9051"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Rovie-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Rovie" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="main" title="Rovie" useStoryboardIdentifierAsRestorationIdentifier="YES" id="BYZ-38-t0r" customClass="ViewController" customModule="Rovie" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
+                    <view key="view" contentMode="scaleToFill" restorationIdentifier="main" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
@@ -70,7 +70,93 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="440" y="429"/>
+            <point key="canvasLocation" x="445" y="429"/>
+        </scene>
+        <!--Controller-->
+        <scene sceneID="Wye-4M-OxP">
+            <objects>
+                <viewController storyboardIdentifier="Controller" title="Controller" useStoryboardIdentifierAsRestorationIdentifier="YES" id="fmB-iX-nzR" customClass="RovieControllerViewController" customModule="Rovie" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="M1F-6j-114"/>
+                        <viewControllerLayoutGuide type="bottom" id="pck-g2-mp5"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="aHU-cX-eAh">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0S1-Yu-EaY">
+                                <rect key="frame" x="278" y="668" width="116" height="30"/>
+                                <animations/>
+                                <color key="backgroundColor" red="0.0" green="1" blue="0.061501125429999998" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="GSN-93-aX1"/>
+                                    <constraint firstAttribute="width" constant="116" id="ub6-6A-Khj"/>
+                                </constraints>
+                                <state key="normal" title="Right Backward">
+                                    <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="buttonDownAction:" destination="fmB-iX-nzR" eventType="touchDown" id="wED-3U-by6"/>
+                                    <action selector="buttonUpAction:" destination="fmB-iX-nzR" eventType="touchUpInside" id="qRb-Ah-etC"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="U7s-rO-75I">
+                                <rect key="frame" x="20" y="615" width="116" height="30"/>
+                                <animations/>
+                                <color key="backgroundColor" red="0.0" green="1" blue="0.06150112543299624" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="116" id="QEX-HI-4cy"/>
+                                    <constraint firstAttribute="height" constant="30" id="ng8-oa-U0T"/>
+                                </constraints>
+                                <state key="normal" title="Left Forward">
+                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="buttonDownAction:" destination="fmB-iX-nzR" eventType="touchDown" id="xvD-zf-j3f"/>
+                                    <action selector="buttonUpAction:" destination="fmB-iX-nzR" eventType="touchUpInside" id="xqP-El-0Mz"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vG4-ap-S1c">
+                                <rect key="frame" x="278" y="615" width="116" height="30"/>
+                                <animations/>
+                                <color key="backgroundColor" red="0.0" green="1" blue="0.061501125429999998" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="JYa-0t-Hp9"/>
+                                    <constraint firstAttribute="width" constant="116" id="cOU-QI-Al3"/>
+                                </constraints>
+                                <state key="normal" title="Right Forward">
+                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="buttonDownAction:" destination="fmB-iX-nzR" eventType="touchDown" id="0Bz-TH-wuh"/>
+                                    <action selector="buttonUpAction:" destination="fmB-iX-nzR" eventType="touchUpInside" id="nHA-23-Vjh"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zLp-wo-qYi">
+                                <rect key="frame" x="20" y="668" width="116" height="30"/>
+                                <animations/>
+                                <color key="backgroundColor" red="0.0" green="1" blue="0.06150112543299624" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="116" id="YWj-9H-U4A"/>
+                                    <constraint firstAttribute="height" constant="30" id="ysk-tr-Yf1"/>
+                                </constraints>
+                                <state key="normal" title="Left Backward">
+                                    <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="buttonDownAction:" destination="fmB-iX-nzR" eventType="touchDown" id="57L-6m-yOP"/>
+                                    <action selector="buttonUpAction:" destination="fmB-iX-nzR" eventType="touchUpInside" id="Dse-h8-7gG"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <animations/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina55"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="dhv-pA-pS1" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="892" y="422"/>
         </scene>
     </scenes>
 </document>
